// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Layout renders successfully 1`] = `
<body>
  <div>
    <header
      class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed makeStyles-root-3 MuiAppBar-colorPrimary mui-fixed"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <next-link
          href="/"
        >
          <a
            class=""
            color="inherit"
            href="/"
            title="Home"
          >
            <img
              alt="Logo"
              class="makeStyles-logo-5 lazyload"
              data-src="/static/images/logo.svg"
            />
          </a>
        </next-link>
        <div
          class="makeStyles-flexGrow-4"
        />
        <div
          class="PrivateHiddenCss-smDown-57"
        >
          <div>
            <next-link
              href="/"
            >
              <a
                class="makeStyles-menuItem-6"
                color="inherit"
                href="/"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-9 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-8"
                    >
                      common.home
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/blogs"
            >
              <a
                class="makeStyles-menuItem-6"
                color="inherit"
                href="/blogs"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-9 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"
                      />
                      <path
                        d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99zM13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83zM17.5 14.33c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-8"
                    >
                      common.blogs
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/aboutUs"
            >
              <a
                class="makeStyles-menuItem-6"
                color="inherit"
                href="/aboutUs"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-9 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-8"
                    >
                      common.aboutUs
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/login"
            >
              <a
                class="makeStyles-menuItem-6"
                color="inherit"
                href="/login"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-9 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 4c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm6 12H6v-1.4c0-2 4-3.1 6-3.1s6 1.1 6 3.1V19z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-8"
                    >
                      common.login
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/register"
            >
              <a
                class="makeStyles-menuItem-6"
                color="inherit"
                href="/register"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-9 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 10H5V7H3v3H0v2h3v3h2v-3h3v-2zm10 1c1.66 0 2.99-1.34 2.99-3S19.66 5 18 5c-.32 0-.63.05-.91.14.57.81.9 1.79.9 2.86s-.34 2.04-.9 2.86c.28.09.59.14.91.14zm-5 0c1.66 0 2.99-1.34 2.99-3S14.66 5 13 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm6.62 2.16c.83.73 1.38 1.66 1.38 2.84v2h3v-2c0-1.54-2.37-2.49-4.38-2.84zM13 13c-2 0-6 1-6 3v2h12v-2c0-2-4-3-6-3z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-8"
                    >
                      common.register
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
          </div>
        </div>
        <div>
          <button
            aria-label="common.changeLanguage"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="MuiAvatar-root makeStyles-icon-108 MuiAvatar-colorDefault"
              >
                EN
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <button
          aria-label="notification"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              class="MuiBadge-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                />
              </svg>
              <span
                class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary MuiBadge-dot"
              />
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="menu-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <div
      class="makeStyles-container-1"
    >
      <main
        class="makeStyles-main-2"
      />
      <footer
        class="makeStyles-root-153"
      >
        <div
          class="MuiGrid-root MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 MuiGrid-grid-lg-2"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-lg-8"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-3"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6"
                >
                  common.company
                </h6>
                <div
                  class="makeStyles-linkContainer-155"
                >
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-link-154"
                      color="inherit"
                      href="/"
                    >
                      common.home
                    </a>
                  </next-link>
                </div>
                <div
                  class="makeStyles-linkContainer-155"
                >
                  <next-link
                    href="/aboutUs"
                  >
                    <a
                      class="makeStyles-link-154"
                      color="inherit"
                      href="/aboutUs"
                    >
                      common.aboutUs
                    </a>
                  </next-link>
                </div>
                <div
                  class="makeStyles-linkContainer-155"
                >
                  <next-link
                    href="/blogs"
                  >
                    <a
                      class="makeStyles-link-154"
                      color="inherit"
                      href="/blogs"
                    >
                      common.blogs
                    </a>
                  </next-link>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6"
                >
                  common.socialMedias
                </h6>
                <div>
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-socialLink-156"
                      color="inherit"
                      href="/"
                      title="facebook"
                    >
                      <img
                        alt="facebook"
                        class="makeStyles-image-157 lazyload"
                        data-src="/static/images/facebook.png"
                      />
                    </a>
                  </next-link>
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-socialLink-156"
                      color="inherit"
                      href="/"
                      title="linkedIn"
                    >
                      <img
                        alt="linkedIn"
                        class="makeStyles-image-157 lazyload"
                        data-src="/static/images/linkedin.png"
                      />
                    </a>
                  </next-link>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6"
                >
                  ©
                   
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-link-154"
                      color="inherit"
                      href="/"
                    >
                      Thinh Tran
                    </a>
                  </next-link>
                   
                  2019
                </h6>
                <span
                  class="MuiTypography-root MuiTypography-caption"
                >
                  common.createdWithLove
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 MuiGrid-grid-lg-2"
          />
        </div>
      </footer>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="MuiPopover-root"
    id="simple-menu"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
  >
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiMenu-paper MuiPaper-elevation8 MuiPopover-paper MuiPaper-rounded"
      style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
      tabindex="-1"
    >
      <ul
        class="MuiList-root MuiMenu-list MuiList-padding"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          role="menuitem"
          tabindex="0"
        >
          English
          <span
            class="MuiTouchRipple-root"
          />
        </li>
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          role="menuitem"
          tabindex="-1"
        >
          Tiếng Việt
          <span
            class="MuiTouchRipple-root"
          />
        </li>
      </ul>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`components/Layout renders successfully with title 1`] = `
<body>
  <div>
    <header
      class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed makeStyles-root-322 MuiAppBar-colorPrimary mui-fixed"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <next-link
          href="/"
        >
          <a
            class=""
            color="inherit"
            href="/"
            title="Home"
          >
            <img
              alt="Logo"
              class="makeStyles-logo-324 lazyload"
              data-src="/static/images/logo.svg"
            />
          </a>
        </next-link>
        <div
          class="makeStyles-flexGrow-323"
        />
        <div
          class="PrivateHiddenCss-smDown-376"
        >
          <div>
            <next-link
              href="/"
            >
              <a
                class="makeStyles-menuItem-325"
                color="inherit"
                href="/"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-328 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-327"
                    >
                      common.home
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/blogs"
            >
              <a
                class="makeStyles-menuItem-325"
                color="inherit"
                href="/blogs"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-328 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"
                      />
                      <path
                        d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99zM13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83zM17.5 14.33c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-327"
                    >
                      common.blogs
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/aboutUs"
            >
              <a
                class="makeStyles-menuItem-325"
                color="inherit"
                href="/aboutUs"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-328 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-327"
                    >
                      common.aboutUs
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/login"
            >
              <a
                class="makeStyles-menuItem-325"
                color="inherit"
                href="/login"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-328 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 4c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm6 12H6v-1.4c0-2 4-3.1 6-3.1s6 1.1 6 3.1V19z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-327"
                    >
                      common.login
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
            <next-link
              href="/register"
            >
              <a
                class="makeStyles-menuItem-325"
                color="inherit"
                href="/register"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuItemButton-328 MuiButton-colorInherit"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 10H5V7H3v3H0v2h3v3h2v-3h3v-2zm10 1c1.66 0 2.99-1.34 2.99-3S19.66 5 18 5c-.32 0-.63.05-.91.14.57.81.9 1.79.9 2.86s-.34 2.04-.9 2.86c.28.09.59.14.91.14zm-5 0c1.66 0 2.99-1.34 2.99-3S14.66 5 13 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm6.62 2.16c.83.73 1.38 1.66 1.38 2.84v2h3v-2c0-1.54-2.37-2.49-4.38-2.84zM13 13c-2 0-6 1-6 3v2h12v-2c0-2-4-3-6-3z"
                      />
                    </svg>
                    <span
                      class="makeStyles-menuItemText-327"
                    >
                      common.register
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </a>
            </next-link>
          </div>
        </div>
        <div>
          <button
            aria-label="common.changeLanguage"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="MuiAvatar-root makeStyles-icon-427 MuiAvatar-colorDefault"
              >
                EN
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <button
          aria-label="notification"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              class="MuiBadge-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                />
              </svg>
              <span
                class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary MuiBadge-dot"
              />
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="menu-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <div
      class="makeStyles-container-320"
    >
      <main
        class="makeStyles-main-321"
      />
      <footer
        class="makeStyles-root-472"
      >
        <div
          class="MuiGrid-root MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 MuiGrid-grid-lg-2"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-lg-8"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-3"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6"
                >
                  common.company
                </h6>
                <div
                  class="makeStyles-linkContainer-474"
                >
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-link-473"
                      color="inherit"
                      href="/"
                    >
                      common.home
                    </a>
                  </next-link>
                </div>
                <div
                  class="makeStyles-linkContainer-474"
                >
                  <next-link
                    href="/aboutUs"
                  >
                    <a
                      class="makeStyles-link-473"
                      color="inherit"
                      href="/aboutUs"
                    >
                      common.aboutUs
                    </a>
                  </next-link>
                </div>
                <div
                  class="makeStyles-linkContainer-474"
                >
                  <next-link
                    href="/blogs"
                  >
                    <a
                      class="makeStyles-link-473"
                      color="inherit"
                      href="/blogs"
                    >
                      common.blogs
                    </a>
                  </next-link>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6"
                >
                  common.socialMedias
                </h6>
                <div>
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-socialLink-475"
                      color="inherit"
                      href="/"
                      title="facebook"
                    >
                      <img
                        alt="facebook"
                        class="makeStyles-image-476 lazyload"
                        data-src="/static/images/facebook.png"
                      />
                    </a>
                  </next-link>
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-socialLink-475"
                      color="inherit"
                      href="/"
                      title="linkedIn"
                    >
                      <img
                        alt="linkedIn"
                        class="makeStyles-image-476 lazyload"
                        data-src="/static/images/linkedin.png"
                      />
                    </a>
                  </next-link>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6"
                >
                  ©
                   
                  <next-link
                    href="/"
                  >
                    <a
                      class="makeStyles-link-473"
                      color="inherit"
                      href="/"
                    >
                      Thinh Tran
                    </a>
                  </next-link>
                   
                  2019
                </h6>
                <span
                  class="MuiTypography-root MuiTypography-caption"
                >
                  common.createdWithLove
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 MuiGrid-grid-lg-2"
          />
        </div>
      </footer>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="MuiPopover-root"
    id="simple-menu"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
  >
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiMenu-paper MuiPaper-elevation8 MuiPopover-paper MuiPaper-rounded"
      style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
      tabindex="-1"
    >
      <ul
        class="MuiList-root MuiMenu-list MuiList-padding"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          role="menuitem"
          tabindex="0"
        >
          English
          <span
            class="MuiTouchRipple-root"
          />
        </li>
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          role="menuitem"
          tabindex="-1"
        >
          Tiếng Việt
          <span
            class="MuiTouchRipple-root"
          />
        </li>
      </ul>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
